k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-twitter-ingress
  namespace: mini-twitter
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: mini-twitter.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mini-twitter-nginx-service
            port:
              number: 80
